--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -58,6 +58,9 @@ h4.from-title {
 .wp-admin .pi-left-sidebar {
     display: none;
 }
+.wp-admin .Toastify__toast-container.Toastify__toast-container--top-right {
+    top: 3em;
+}
 .ncpi .pi-edit-content span { 
     border: 3px solid #fff;
     box-shadow: 0 0 0 1px rgb(0 0 0 / 10%), inset 0 0 0 1px rgb(0 0 0 / 10%);
