before change ncpi local

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -82,7 +82,7 @@ h4.from-title {
     }
 }
 
-//temporary form css
+//temporary form css 
 .ncpi .pi-field-logo-wrap {
     margin-top: 10px;
     .pi-field-logo {
@@ -107,4 +107,7 @@ h4.from-title {
         cursor: pointer;
         box-shadow: rgb(23 10 18 / 18%) 0px 0px 4px;
     }
+}
+.ncpi .pi-signature {
+    margin-top: 70px;
 }
